# language

./: Cargo.toml  LICENSE  README.md
data/: words.ron  words.txt
src/: main.rs
src/plugins/: card.rs  data.rs  mod.rs  output.rs  utils.rs  window.rs
