[package]
name = "language"
version = "0.1.0"
authors = ["Quentin Bordelon"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
ron = "0.8"
serde = { version = "1", features = ["derive"] }
egui = "0.27.2"
eframe = { workspace = true, features = [
    "default",
    "__screenshot",
] }
egui_extras = { workspace = true, features = ["default", "image"] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
