[package]
name = "language"
version = "0.1.0"
authors = ["Quentin Bordelon"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8"
serde = { version = "1", features = ["derive"] }
iced = { version = "0.12.1", features = ["debug"]}
